feat(task_create): create new task

--- a/Inotki/templates/task_list.html
+++ b/Inotki/templates/task_list.html
@@ -21,5 +21,8 @@
         <h3>No items in list</h3>
     {% endfor %}
 </table>
+<br>
+<a href="{% url 'task_create' %}">Create a task</a>
+
 </body>
 </html>
