--- a/Inotki/templates/task_form.html
+++ b/Inotki/templates/task_form.html
@@ -4,5 +4,5 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create new task!</button>
+    <button type="submit">Submit</button>
 </form>
