--- a/Inotki/templates/task_delete.html
+++ b/Inotki/templates/task_delete.html
@@ -1,3 +1,10 @@
+{% extends 'base.html' %}
+
+{% block title %}
+    Task delete page
+{% endblock %}
+
+{% block body_content %}
 <a href="{% url 'tasks' %}">go back </a>
 <form method="POST">
     {% csrf_token %}
@@ -9,3 +16,4 @@
 
     <input type="submit" value="Delete">
 </form>
+{% endblock %}
