--- a/Inotki/templates/task_detail.html
+++ b/Inotki/templates/task_detail.html
@@ -1,2 +1,9 @@
+{% extends 'base.html' %}
 
+{% block title %}
+    Task detail page
+{% endblock %}
+
+{% block body_content %}
 <h1>task: {{ task }}</h1>
+{% endblock %}
