--- a/Inotki/templates/task_form.html
+++ b/Inotki/templates/task_form.html
@@ -1,3 +1,10 @@
+{% extends 'base.html' %}
+
+{% block title %}
+    Task form
+{% endblock %}
+
+{% block body_content %}
 <h3>Task form</h3>
 <a href="{% url 'tasks' %}">go back </a>
 
@@ -6,3 +13,5 @@
     {{ form.as_p }}
     <button type="submit">Submit</button>
 </form>
+
+{% endblock %}
