--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block body_content %}
-<h1>My to do list</h1>
+<h1>My to do list: {{ count }}
+    Task{% if count <= 1 %}{% else %}s{% endif %}</h1>
 <table>
     <tr>
         <th>Item</th>
