--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -7,6 +7,11 @@
 {% block body_content %}
 <h1>My to do list: {{ count }}
     Task{% if count <= 1 %}{% else %}s{% endif %}</h1>
+
+    <form method="GET" action="">
+        <input type="text" name="search-area" value="{{ search_input }}">
+        <input type="submit" value="Search">
+    </form>
 <table>
     <tr>
         <th>Item</th>
