--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -22,6 +22,7 @@
         {% for task in tasks %}
             <tr>
                 <td>
+                    <!-- Only the admin can acces to selector-->
                     {% if admin %}{{ task.user }} : {% endif %}
                     <a href="{% url 'task_detail' task.id %}">{{ task.title }}</a>
                     <a href="{% url 'task_update' task.id %}">edit</a>
