--- a/Inotki/templates/tasks/task_form.html
+++ b/Inotki/templates/tasks/task_form.html
@@ -29,8 +29,9 @@
                 {{ form.description }}
             </div>
             <div style="margin-bottom: 10px">
-                <label for="date">Deadline : </label>
-                {{ form.date_to_do }}
+                <label for="date">Deadline :
+                    {{ form.date_to_do }} <!-- DATA PICKER DJANGO : https://simpleisbetterthancomplex.com/tutorial/2019/01/03/how-to-use-date-picker-with-django.html -->
+
             </div>
             <div style="margin-bottom: 10px">
                 <label for="completed">Completed : </label>
@@ -40,5 +41,4 @@
             <button type="submit">Submit</button>
         </div>
     </form>
-
 {% endblock %}
