--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -15,6 +15,8 @@
         <input type="text" name="search-area" value="{{ search_input }}">
         <input type="submit" value="Search">
     </form>
+    <a href="/?search-area=">x</a>
+
     <table>
         <tr>
             <th>Item</th>
