--- a/Inotki/templates/tasks/task_form.html
+++ b/Inotki/templates/tasks/task_form.html
@@ -29,7 +29,7 @@
                 {{ form.description }}
             </div>
             <div style="margin-bottom: 10px">
-                <label for="date">Deadline :
+                <label for="date">Deadline :</label>
                     {{ form.date_to_do }} <!-- DATA PICKER DJANGO : https://simpleisbetterthancomplex.com/tutorial/2019/01/03/how-to-use-date-picker-with-django.html -->
 
             </div>
