--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,22 +7,28 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--   <script src="{% static 'jquery-3.6.1.min.js' %}"></script> -->
+    <!--  <script src="{% static 'bootstrap.bundle.min.js' %}"></script>-->
+    <!--   <link  rel="stylesheet"  href="{% static 'bootstrap.min.css' %}">-->
+
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}{% endfilter %} Inotki
     </title>
 </head>
 <body>
 
-    {% if request.user.is_authenticated %}
-        <p>{{ request.user }}</p>
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'register' %}">Register</a>
-    {% endif %}
+{% if request.user.is_authenticated %}
+    <p>{{ request.user }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'register' %}">Register</a>
+{% endif %}
 <hr>
-    {% block body_content %}
+{% block body_content %}
 
-    {% endblock %}
+{% endblock %}
+
 </body>
 </html>
