--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -12,6 +12,7 @@
     <!--  <script src="{% static 'bootstrap.bundle.min.js' %}"></script>-->
     <!--   <link  rel="stylesheet"  href="{% static 'bootstrap.min.css' %}">-->
 
+    <!-- names: iloni, Inotki, idoka, igora, glomera-->
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}{% endfilter %} Inotki
     </title>
