--- a/Inotki/templates/base/register.html
+++ b/Inotki/templates/base/register.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Register
@@ -10,9 +11,9 @@
 
     <form method="POST" action="">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Login">
+        {{ form|crispy  }}
+        <input type="submit" value="Sign up">
     </form>
-    <p>Already have an account ? <a href="{% url 'login' %}">Login</a></p>
+    <p>Already have an account ? <a href="{% url 'login' %}">Sign in</a></p>
 
 {% endblock %}
