--- a/Inotki/templates/base/login.html
+++ b/Inotki/templates/base/login.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Login
@@ -10,7 +11,7 @@
 
     <form method="POST" action="">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <input type="submit" value="Login">
     </form>
     <p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
