feat : update user profile (2)

--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -21,6 +21,8 @@
 
     <br><br>
     <a href="{% url 'task_create' %}">Create a task</a>
+    <a href="{% url 'profile' %}">Update your profile</a>
+
     <br>
 
     <h2>Current task </h2>
