--- a/Inotki/templates/base/profile.html
+++ b/Inotki/templates/base/profile.html
@@ -9,13 +9,14 @@
 
     <h1>Update your profile</h1>
 
-    <form method="POST" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class=form-group">
             {{ u_form|crispy  }}
             {{ p_form|crispy  }}
         </fieldset>
-        <button class="btn" type="submit">Update</button>
+        <div class=form-group">
+            <button class="btn" type="submit">Update</button>
+        </div>
     </form>
-
 {% endblock %}
