--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -22,6 +22,7 @@
     <br><br>
     <a href="{% url 'task_create' %}">Create a task</a>
     <a href="{% url 'profile' %}">Update your profile</a>
+    <a href="{% url 'profile' %}">Your profile</a>
 
     <br>
 
