feat: user profile

--- a/Inotki/templates/base/profile.html
+++ b/Inotki/templates/base/profile.html
@@ -1,23 +1,25 @@
 {% extends 'main.html' %}
-{% load crispy_forms_tags %}
 
 {% block title %}
-    Register
+    Profile
 {% endblock %}
 
 {% block body_content %}
+    <h1 ><a href="{% url 'tasks' %}">Tasks /<small> Profile</small></a> </h1>
 
-    <h1>Update your profile</h1>
-    <a href="{% url 'tasks' %}">go back to your tasks</a>
+    <div class="media">
+        {% if user.profile.image %}
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url|default_if_none:'/media/profile_pics/default.jpg' }}">
+        {% else %}
+                <img class="rounded-circle account-img" src="/media/profile_pics/default.jpg">
+        {% endif %}
+        <div class="media-body">
+            <h2 class="account-heading">{{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+            <p class="text-secondary">{{ user.profile.bio }}</p>
+            <a href="{% url 'profile_update' %}">Edit</a>
 
-    <form method="POST" action="" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class=form-group">
-            {{ u_form|crispy  }}
-            {{ p_form|crispy  }}
-        </fieldset>
-        <div class=form-group">
-            <button class="btn" type="submit">Update</button>
         </div>
-    </form>
+    </div>
+
 {% endblock %}
