--- a/Inotki/templates/base/login.html
+++ b/Inotki/templates/base/login.html
@@ -15,5 +15,6 @@
         <input type="submit" value="Login">
     </form>
     <p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
+    <p><a href="{% url 'password_reset' %}">Forgot your password ?</a></p>
 
 {% endblock %}
