--- a/Inotki/templates/tasks/task_form.html
+++ b/Inotki/templates/tasks/task_form.html
@@ -39,6 +39,12 @@
             <div style="margin-bottom: 10px">
                 <label for="completed">Tags : </label>
                 {{ form.tags }}
+                {% if task.id %}
+                    <a href="{% url 'tag_create_pk' task.id %}">+</a>
+                {% else %}
+                    <a href="{% url 'tag_create' %}">+</a>
+                {% endif %}
+
             </div>
 
             <div style="margin-bottom: 10px">
@@ -46,8 +52,11 @@
                 {{ form.complete }}
             </div>
 
-            <input type='hidden' value='{{lecture.pk}}' name='pk'>
-            <button type="submit">Submit</button>
+            {% if task.id %}
+                <button type="submit">Update</button>
+            {% else %}
+                <button type="submit">Create</button>
+            {% endif %}
         </div>
     </form>
 
