--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -29,7 +29,7 @@
             <a href="{% url 'tasks' %}">Tasks</a>
             <a href="{% url 'tags' %}">Tags</a>
             <a href="{% url 'profile' %}">Profile</a>
-            <a href="{% url 'option_update' %}">User parameter</a>
+            <a href="{% url 'option_update' %}">Option</a>
             <a href="{% url 'logout' %}">Logout</a>
             {% if admin %}
                 <a href="/admin">Admin Dashboard</a>
