--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -31,7 +31,7 @@
             <a href="{% url 'profile' %}">Profile</a>
             <a href="{% url 'option_update' %}">Option</a>
             <a href="{% url 'logout' %}">Logout</a>
-            {% if admin %}
+            {% if user.is_staff %}
                 <a href="/admin">Admin Dashboard</a>
             {% endif %}
         </div>
