--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -107,10 +107,8 @@
 
     {% if show_completed_task == True %}
         <!-- COMPLETED TASK -->
-        {% if tasks_completed %}
-            <hr>
-            <h2>Completed task </h2>
-        {% endif %}
+        <hr>
+        <h2>Completed task </h2>
         {% for task in tasks_completed %}
 
             <ul>
@@ -125,6 +123,8 @@
                     <a href="{% url 'task_delete' task.id %}">delete</a>
                 </li>
             </ul>
+        {% empty %}
+            <ul><li><h3>No items yet</h3></li></ul>
         {% endfor %}
     {% endif %}
 
