--- a/Inotki/static/css/style.css
+++ b/Inotki/static/css/style.css
@@ -121,42 +121,27 @@ header{
 }
 
 /* button icon */
-.icon-button {
+.notificationIcon {
 	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 50px;
 	height: 50px;
-	background-color: #FCFCFD;
 	border-radius: 4px;
-	border-width: 0;
-	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-	color: #36395A;
+	color: #ffffff;
+	border: none;
 	cursor: pointer;
+	background: none;
 }
 
-.icon-button:focus {
-	box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-.icon-button:hover {
-	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-	transform: translateY(-2px);
-}
-
-.icon-button:active {
-	box-shadow: #D6D6E7 0 3px 7px inset;
-	transform: translateY(2px);
-}
-
-.icon-button__badge {
+.notificationIcon__badge {
 	position: absolute;
-	top: -10px;
-	right: -10px;
-	width: 25px;
-	height: 25px;
-	background: red;
+	top: 4px;
+	right: 3px;
+	width: 20px;
+	height: 20px;
+	background: #ff0c0c;
 	color: #ffffff;
 	display: flex;
 	justify-content: center;
