--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!--  <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />-->
+    <!--<script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" /> -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/burger.css' %}" />
     <script src="{% static 'js/app.js' %}" defer></script>
@@ -33,17 +33,19 @@
         </div>
 
         <div class="toggle">
+            {% if request.user.is_authenticated %}
+                <div>
+                    <button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
+                        <i class="fa-solid fa-bell fa-lg"></i>
+                        <span class="notificationIcon__badge">2</span>
+                    </button>
+                </div>
+            {% endif %}
             <div class="openb"><i class="fa-solid fa-bars"></i></div>
             <div class="closeb"><i class="fa-solid fa-xmark"></i></div>
-            <div>
-                <button onclick="location.href='{% url 'tasks' %}'" type="button" class="icon-button">
-                    <i class="fa-solid fa-bell"></i>
-                    <span class="icon-button__badge">2</span>
-                </button>
-            </div>
         </div>
 
-        <ul class="menu">
+        <ul class="menu nav">
             {% if request.user.is_authenticated %}
                 <li><a href="{% url 'tasks' %}">Tasks</a></li>
                 <li><a href="{% url 'tags' %}">Tags</a></li>
@@ -52,9 +54,9 @@
                 {% if user.is_staff %}
                     <li><a href="/admin">Admin Dashboard</a></li>
                 {% endif %}
-                <li class="mobileFormatNotifLi"><button onclick="location.href='{% url 'tasks' %}'" type="button" class="icon-button">
-                    <i class="fa-solid fa-bell"></i>
-                    <span class="icon-button__badge">2</span>
+                <li class="mobileFormatNotifLi"><button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
+                    <i class="fa-solid fa-bell fa-lg"></i>
+                    <span class="notificationIcon__badge">2</span>
                 </button></li>
                 <li><button class="button3D" onclick="location.href='{% url 'logout' %}'">Logout</button></li>
 
