--- a/Inotki/static/css/burger.css
+++ b/Inotki/static/css/burger.css
@@ -10,6 +10,18 @@
         z-index: 200;
     }
 
+    .notificationIcon{
+        margin-right: 10px;
+    }
+
+    .notificationIcon:hover{
+        background-color: rgba(252, 252, 253, 0);
+        border-radius: 4px;
+        border-width: 0;
+        box-shadow: none;
+        color: rgb(255, 255, 255);
+    }
+
     .openb {
         display: block;
     }
@@ -47,8 +59,7 @@
         margin-left:0px;
     }
     .menu li a{
-        padding-left: 0px;
-        padding-right: 0px;
+        padding: 15px 20px;
     }
 
     .open .menu{
