--- a/Inotki/static/css/style.css
+++ b/Inotki/static/css/style.css
@@ -57,8 +57,16 @@ header{
 .menu li a{
 	color: #f3f3f3;
 	font-family: 'Poppins', sans-serif;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 15px 20px;
+}
+
+.menu li a:hover{
+	background-color: #FCFCFD;
+	border-radius: 4px;
+	border-width: 0;
+	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+	color: #36395A;
+
 }
 
 /* ALERT  */
@@ -133,6 +141,14 @@ header{
 	border: none;
 	cursor: pointer;
 	background: none;
+}
+
+.notificationIcon:hover{
+	background-color: #FCFCFD;
+	border-radius: 4px;
+	border-width: 0;
+	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+	color: #36395A;
 }
 
 .notificationIcon__badge {
