--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -36,7 +36,7 @@
             {% if request.user.is_authenticated %}
                 <div>
                     <button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
-                        <i class="fa-solid fa-bell fa-lg"></i>
+                        <i class="fa-solid fa-bell fa-xl"></i>
                         <span class="notificationIcon__badge">2</span>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <li><a href="/admin">Admin Dashboard</a></li>
                 {% endif %}
                 <li class="mobileFormatNotifLi"><button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
-                    <i class="fa-solid fa-bell fa-lg"></i>
+                    <i class="fa-solid fa-bell fa-xl"></i>
                     <span class="notificationIcon__badge">2</span>
                 </button></li>
                 <li><button class="button3D" onclick="location.href='{% url 'logout' %}'">Logout</button></li>
